examples/test/conf/Gateway/AllowedRoutes/Kinds/HTTPRoute.yaml
# HTTPRoute（）
# Gateway  allowedRoutes.kinds  HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kinds-http-route
  namespace: edgion-test
spec:
  parentRefs:
    - name: allowed-routes-kinds-gateway
      namespace: edgion-test
  hostnames:
    - "kinds-http.example.com"
  rules:
    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - name: test-http
          port: 30001
